--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.oscarjimenez</groupId>
 	<artifactId>datamanageproject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>datamanageproject</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
